[tool.poetry]
name = "nfv-test-api"
version = "0.3.2"
description = ""
authors = ["Inmanta <code@inmanta.com>"]
include=["misc/*"]
packages = [
    { include = "nfv_test_api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.1"
PyYAML = "^5.3"
flask-cors = "^3.0.8"
click = "^7.0"
pingparsing = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
isort = "*"
flake8 = "*"
lxml = "*"
black = "^19.10b0"
pytest-flask = "^1.0.0"
requests = "^2.23.0"

[tool.black]
line-length = 128
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
