[metadata]
name = inmanta-nfv-test-api
version = 2.5.0
description = API for testing network functions.
author = Inmanta
author_email = code@inmanta.com
license = Apache-2.0
copyright = 2023 Inmanta

[options]
zip_safe = False
include_package_data = True
include = misc/*
install_requires = Flask~=1.1
    PyYAML~=6.0
    flask-cors~=3.0
    flask-restplus~=0.13
    flask-apispec~=0.11
    click~=7.0
    pingparsing~=1.0
    trparse~=0.3
    werkzeug~=0.16
    apispec~=5.1
    requests~=2.23
    pydantic~=1.8

[options.packages.find]
include = src*

[options.entry_points]
console_scripts =
    nfv-test-api = nfv_test_api.main:main

[flake8]
# H101 Include your name with TODOs as in # TODO(yourname). This makes it easier to find out who the author of the comment was.
# H302 Do not import objects, only modules DEPRICATED
# H404 Multi line docstrings should start without a leading new line.
# H405 multi line docstring summary not separated with an empty line
# H301 Do not import more than one module per line (*)
# H306 Alphabetically order your imports by the full module path.
# E203 whitespace before ':' " on list slice.
# E266 too many leading ‘#’ for block comment
# E252 missing whitespace around parameter equals
# F722 syntax error in forward annotation
# W503 line break before binary operator
# Note: E203 whitespaces and the slice operator. black and flake disagree
# Note: F722 because many inmanta types are seen as forward declarations
ignore = H405,H404,H302,H306,H301,H101,E252,E203,F722,W503

# These inmanta primitive types will throw F821 in annotations
# see: http://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-builtins
builtins=string,number,bool
max-line-length = 128
exclude = **/.env,venv
copyright-check=True
copyright-author=Inmanta
# C errors are not selected by default, so add them to your selection
select = E,F,W,C,BLK,I

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
# Black splits up import statements that are too long
# Setting isorts line_length to 88 (blacks default) so they do not collide
line_length=88

[black]
line-length=128
target-version = 'py36', 'py37', 'py38'
